@@ -34,6 +34,7 @@ makegdbm_SOURCES = \
         options.c \
         options.h
 
-makegdbm_LDADD = -L../libjain -L../libjain/.libs/ -ljain -lgdbm -lpopt
+makegdbm_LDADD = -L../libjain -L../libjain/.libs/ -ljain -lgdbm -lpopt \
+@dmalloc_lib@
 
 INCLUDES=-I$(top_srcdir)/libjain
