@@ -25,13 +25,21 @@
  *
  **********************************************************************/
 
-#include "options.h"
+#ifdef HAVE_CONFIG_H
+#include "config.h"
+#endif
+
 #include <string.h>
 #include <errno.h>
 #include <unistd.h>
 #include <stdlib.h>
 #include <ctype.h>
 
+#include "options.h"
+
+#ifdef DMALLOC
+#include <dmalloc.h>
+#endif
 
 
 extern int errno;
