@@ -37,7 +37,7 @@ perditiondb_posix_regex.h
 
 libperditiondb_posix_regex_la_LDFLAGS    = -version-info 0:0:0
 
-libperditiondb_posix_regex_la_LIBADD = @ssl_libs@ @posix_regex_libs@
+libperditiondb_posix_regex_la_LIBADD = @ssl_lib@ @posix_regex_libs@
 
 INCLUDES=\
   -I$(top_srcdir)/ \
@@ -45,6 +45,3 @@ INCLUDES=\
   -I$(top_srcdir)/libjain \
   @ssl_includes@ \
   -DPERDITIONDB_POSIX_REGEX_SYSCONFDIR=\"$(sysconfdir)/perdition\"
-
-
-
